Added an indicator to where the "word matchups" would go ig

--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
 
 <h2> 2 Wierd Word Station (click button owo) </h2>
 
-<p id = "output"></p>
+<p id = "output">(Word matchups go here!)</p>
 
 <script>
 
