added a meta charset

--- a/index.html
+++ b/index.html
@@ -2,9 +2,14 @@
 
 </style>
 
+<head>
+
+  <meta charset:"UTF-8">
+
+  
 </head>
 
-<h2> Welcome to my test website lol </h2>
+<h2>Welcome To My Test Website!</h2>
 
 <h2 id = "day"></h2>
 
