--- a/index.html
+++ b/index.html
@@ -31,6 +31,14 @@
 
 <body>
 
+
+
+
+
+
+
+
+
   <script>
 
 
@@ -112,7 +120,26 @@
       document.getElementById("code").style.display = 'none';
       document.getElementById("removeCodeButton").style.display = 'none';
     }
-    
+
+
+
+  function rollDie(){
+    document.getElementById("dice").innerHTML = "You have rolled a " + Math.floor(Math.random() * 6 + 1) + "!";
+  }
+
+
+   var text = '{"words":[' +
+  '{"firstName":"car","lastName":"large"},' +
+  '{"firstName":"pp","lastName":"stuck"},' +
+  '{"firstName":"human","lastName":"scratch"}]}';
+
+obj = JSON.parse(text);
+
+function randomPick(){
+document.getElementById("output").innerHTML = 
+obj.words[Math.floor(Math.random() * 2 + 1)].firstName + " " + obj.words[Math.floor(Math.random() * 2 + 1)].lastName;
+}
+
 
   </script>
 
@@ -139,28 +166,29 @@
 
 <br>
 <br>
+
+
+
 <br>
-<br>
-<br>
-<br>
-<br>
-<br>
+<h2> The Die Roller! </h2>
+
+
+<p id = "dice">You have rolled a ___!</p>
+
+<button type="button" onclick = "rollDie()"> Click To Roll The Dice! </button>
+
+
+
+
+
 <br>
 <br>
 <br>
 <br>
 
-<p> let's do a quiz! :DD </p>
 
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
+<h2> Let's Do A Quiz!!
+
 <br>
 <br>
 <br>
@@ -211,33 +239,21 @@
 <br>
 <br>
 <br>
-<br>
-<br>
-<br>
-<br>
-<br>
+
 
 <h2> 2 Wierd Word Station (click button owo) </h2>
+<br>
+<br>
 
 <p id = "output">(Word matchups go here!)</p>
 
-<script>
 
 
-    var text = '{"words":[' +
-  '{"firstName":"car","lastName":"large"},' +
-  '{"firstName":"pp","lastName":"stuck"},' +
-  '{"firstName":"human","lastName":"scratch"}]}';
-
-obj = JSON.parse(text);
-
-function randomPick(){
-document.getElementById("output").innerHTML = 
-obj.words[Math.floor(Math.random() * 2 + 1)].firstName + " " + obj.words[Math.floor(Math.random() * 2 + 1)].lastName;
-}
+   
 
 
-</script>
+<br>
+<br>
 
 <button onclick = "randomPick()"> Click here for random word matchups! </button>
 
