added colors and an image lol

--- a/index.html
+++ b/index.html
@@ -6,6 +6,21 @@
 
   <meta charset:"UTF-8">
 
+  <style>
+
+    h2 {
+      color: red;
+    }
+
+
+    body {
+      background-color: rgb(97, 250, 257);
+    }
+
+
+
+    </style>
+
   
 </head>
 
@@ -215,9 +230,15 @@ obj.words[Math.floor(Math.random() * 2 + 1)].firstName + " " + obj.words[Math.fl
 <br>
 <br>
 <br>
+<img src = "https://hips.hearstapps.com/hmg-prod.s3.amazonaws.com/images/woozy-1553631153.jpg?crop=0.352xw:0.626xh;0.325xw,0.187xh&resize=768:*">
 
+<br>
+<br>
 
 <button type = "button" onclick = "startQuiz()"> Start Quiz! </button>
+
+
+
 
 <p id = "question1" style = "display:none"> What is 1+1? </p>
 
