added an actual link to the "code"

--- a/index.html
+++ b/index.html
@@ -308,7 +308,7 @@ obj.words[Math.floor(Math.random() * 2 + 1)].firstName + " " + obj.words[Math.fl
 
 <br>
 
-<p id = "code" style = "display:none"> It's in this link: https://www.youtube.com/watch?v=oHg5SJYRHA0 </p>
+<a id = "code" style = "display:none" href = "https://www.youtube.com/watch?v=oHg5SJYRHA0"> Here is the code! (click me) </a>
 
 <br>
 
