--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
   <style>
 
-    h2 {
+    #heading {
       color: red;
     }
 
@@ -26,7 +26,7 @@
 
 <body>
 
-<h2>Welcome To My Test Website!</h2>
+<h1 id = "heading">Welcome To My Test Website!</h1>
 
 <h2 id = "day"></h2>
 
@@ -59,6 +59,9 @@
   <script>
 
 
+
+    var headingEl = document.querySelector("#heading");
+    headingEl.style.textAlign = "center";
 
 
 
