--- a/index.html
+++ b/index.html
@@ -85,9 +85,9 @@
 
 <br>
 <br>
-<h2> Waifu picture for Mostepic lmaooo </h2>
+<h2> Picture for Mostepic lool </h2>
 
-<img id = "waifu" style = "display:none" src = "https://media.discordapp.net/attachments/701965505182826687/774002013087203348/69ba73b1-06c7-4220-a83c-a5295eb497ea.png">
+<img id = "waifu" style = "display:none" src = "https://as2.ftcdn.net/v2/jpg/04/93/91/31/1000_F_493913135_q0Ar7Aund7lRPFSxa8qg1hTQmhG5kdNP.jpg">
 
 <br>
 <button type = "button" id = "showwife" onclick = "showWaifu()"> Click to show waifu! :D </button>
