--- a/index.html
+++ b/index.html
@@ -90,9 +90,9 @@
 <img id = "waifu" style = "display:none" src = "https://as2.ftcdn.net/v2/jpg/04/93/91/31/1000_F_493913135_q0Ar7Aund7lRPFSxa8qg1hTQmhG5kdNP.jpg">
 
 <br>
-<button type = "button" id = "showwife" onclick = "showWaifu()"> Click to show waifu! :D </button>
+<button type = "button" id = "showwife" onclick = "showWaifu()"> Click to show! :D </button>
 
-<button type = "button" id = "hidewife" style = "display:none" onclick = "hideWaifu()"> Click to hide waifu :(</button>
+<button type = "button" id = "hidewife" style = "display:none" onclick = "hideWaifu()"> Click to hide :(</button>
 
 <br>
 <br>
@@ -106,7 +106,7 @@
 <br>
 <br>
 <br>
-<img src = "https://hips.hearstapps.com/hmg-prod.s3.amazonaws.com/images/woozy-1553631153.jpg?crop=0.352xw:0.626xh;0.325xw,0.187xh&resize=768:*">
+<img src = "https://as2.ftcdn.net/v2/jpg/04/93/91/31/1000_F_493913135_q0Ar7Aund7lRPFSxa8qg1hTQmhG5kdNP.jpg">
 
 <br>
 <br>
